# oishi

./: Cargo.toml  Dockerfile  README.md  iv.yaml  justfile
.github/workflows/: test-image-push.yml
docs/: assert-library.md  base-image.md  gestor-de-paquetes.md  gestor-de-tareas.md  logica-de-negocio.md  milestones.md  personas.md  test-runner.md  user-stories.md
docs/objetivos/: objetivo-0.md  objetivo-1.md  objetivo-2.md  objetivo-3.md
oishi/: Cargo.toml
oishi/src/: main.rs  types.rs
oishi/src/types/: info_nutricional.rs  ingrediente.rs  receta.rs
src/: info_nutricional.rs  ingrediente.rs  main.rs  menu_dia.rs  plan_dia.rs  receta.rs
