[package]
name = "oishi"
version = "3.0.0"
edition = "2021"
publish = false
license = "AGPLv3"
readme = "README.md"
description = """
Un planificador semanal de comidas.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
